<resources>
    <string name="app_name">InstantMessaging</string>

    <!-- 登录页面string   -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_login">登录</string>
    <string name="login_username">用户名/邮箱/手机号</string>
    <string name="login_password">密码</string>
    <string name="login_btn">登录</string>
<!--    <string name="btn_regiter">注册</string>-->
    <string name="label_go_to_register">还没有账号？去注册</string>

    <!--  注册界面  -->
    <string name="label_register">注册</string>
    <string name="behavior_collect">点此进行行为采集</string>
    <string name="register_btn">注册</string>

    <!--行为界面-->
    <string name="btn_upload">上传</string>
    <string name="btn_predict">验证</string>
    <string name="label_behavior">行为采集</string>

    <!--  主界面  -->
    <string name="main_message">消息</string>
    <string name="main_contact">联系人</string>
    <string name="main_moment">好友请求</string>

    <!--  个人信息界面  -->
    <string name="change_password">修改密码</string>
    <string name="change_username">修改用户名</string>
    <string name="change_desc">修改个签</string>
    <string name="exit_login">退出登录</string>


    <!--  消息界面  -->
    <string name="btn_message_send">发送</string>

    <!--好友请求界面-->
    <string name="accept_friend">同意</string>
    <string name="refuse_friend">拒绝</string>


</resources>
