<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/personal_username"
            android:icon="@drawable/icon_account"
            android:title="@string/change_username"/>
        <item
            android:id="@+id/personal_password"
            android:icon="@drawable/icon_settings"
            android:title="@string/change_password"/>
        <item
            android:id="@+id/personal_desc"
            android:icon="@drawable/ic_desc"
            android:title="@string/change_desc"/>
        <item
            android:id="@+id/exit_login"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit_login"/>

    </group>

</menu>